[tool.poetry]
name = "tada-predict"
version = "1.0.3"
description = "Predict the likely worst-case order-of-growth function for an arbitrary Python function."
authors = [
    "Enpu You <youe2@allegheny.edu>",
    "Gregory Kapfhammer <gkapfham@allegheny.edu>",
    "Lancaster Wu <wuj@allegheny.edu>"
    ]
maintainers = [
    "Enpu You <youe2@allegheny.edu>",
    "Lancaster Wu <wuj@allegheny.edu>"
    ]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://tada-predict.netlify.app"
repository = "https://github.com/Tada-Project/tada"
packages = [
    { include = "tada"},
]

[tool.poetry.dependencies]
python = "^3.6"
pyperf = "*"
hypothesis = "*"
hypothesis-jsonschema = "*"
pandas = "*"
ptable = "*"
colorama = "*"
matplotlib = "^3.3.0"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.6"
markdown-include = "^0.6.0"
mkdocs-git-revision-date-plugin = "^0.3.1"

[tool.poetry.dev-dependencies]
pylint = "*"
neovim = "*"
pytest = "*"
pytest-benchmark = "*"
codecov = "*"
flake8 = "*"
pytest-cov = "*"
black = "^19.10b0"

[tool.poetry.scripts]
tada = 'tada:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
